--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,20 +1,43 @@
+:root {
+    --blue: rgb(33, 46, 75);
+    --grey: rgba(128, 128, 128, 0.456);
+}
+
+body {margin: 0;}
+* {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--blue);
+}
+
 .navigation-grocery {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px;
+    position: fixed;
+    background-color: white;
+    border-bottom: 1px solid;
+    width: 100%;
+    margin-top: 0px!important;
+    top: 0;
 }
 
 .navigation-items {
     list-style-type: none;
     padding: 20px;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
 }
 
 .navigation-items li {
     display: inline;
     padding: 10px;
     justify-content: space-evenly;
+}
+
+.navigation-items a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .navigation-items li:first-child {
@@ -27,12 +50,25 @@
 
 header {
     text-align: center;
+    margin-top: 50px;
+}
+
+header h1 {
+    font-size: 50px;
+    width: 700px;
+    margin: auto;
+}
+
+header h3 {
+    color: grey;
+    font-size: 25px;
+    font-weight: 400;
 }
 
 .circle {
     border: 1px solid black;
-    width: 50px;
-    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
     border-radius: 100%;
 }
 
@@ -54,9 +90,226 @@ header {
 
 .col-100 {
     display: flex;
-    width: 100%;
+    margin: 20px 80px;
+}
+
+.col-33 {
+    display: flex;
+    flex: 33%;
 }
 
 nav img {
-    width: 10%;
+    width: 5%;
+    margin-left: 10px;
+}
+
+form {
+    background-color: lightgrey;
+    padding-left: 10px;
+}
+
+.divider {
+    width: 100%;
+    border-bottom: 2px solid rgb(228, 228, 228);
+    margin: 0px;
+    padding: 0px;
+}
+
+footer img {
+    width: 100px
+}
+
+.container-banner {
+    text-align: center;
+}
+
+.container-banner img {
+    border-radius: 6px;
+    width: 900px;
+    height: 450px;
+    object-fit: cover;
+}
+
+.container-banner .comment {
+    color: grey;
+    font-style: italic;
+    font-size: 20px;
+}
+
+.mini-profile {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 10px 300px;
+    font-size: 20px;
+}
+
+.mini-profile p {
+    flex-direction: row;
+    text-align: left;
+    margin: 6px;
+}
+
+.mini-profile img {
+    width: 70px;
+    height: 70px;
+    border: 1px solid grey;
+    border-radius: 100%;
+}
+
+.mini-profile-name {
+    font-style: none;
+    font-weight: bold;
+    color: var(--blue);
+}
+
+.dash {
+    border: 5px solid var(--grey);
+    border-radius: 50px;
+    width: 150px;
+    margin: auto;
+}
+
+.headline {
+    font-size: 30px;
+    padding: 20px
+}
+
+.headline .circle {
+    background-color: lightgrey;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+form {
+    padding: 10px 30px 40px;
+    border-radius: 6px;
+    height: fit-content;
+}
+
+.heading-form {
+    font-size: 24px;
+}
+
+form div p {
+    font-weight: 300;
+}
+
+form label {
+    font-size: 20px;
+}
+
+form input, select {
+    box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    padding: 4px 10px;
+    margin: auto;
+    font-size: 16px;
+    border-radius: 4px;
+    border: none;
+    margin-bottom: 18px;
+    margin-top: 4px;
+}
+
+.whole-divider {
+    width: auto;
+    height: 100px;
+    background-color: lightgrey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+}
+
+.whole-divider .flex {
+    justify-content: space-between;
+    margin-right: 100px;
+}
+
+.package {
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.package-item {
+    margin-left: 10px;
+}
+
+.dash-package {
+    border: 3px solid var(--grey);
+    border-radius: 50px;
+    width: 150px;
+    margin: auto;
+    margin-top: 26px;
+    margin-bottom: 26px;
+}
+
+.package-item p:first-child {
+    font-weight: bold;
+    font-size: 20px;
+    color: var(--blue);
+}
+
+.package-item p {
+    color: grey;
+    width: 90%;
+    text-wrap: wrap;
+}
+
+.closing-argument {
+    text-align: center;
+}
+
+.closing-argument h2 {
+    font-size: xx-large;
+}
+
+.closing-argument p {
+    color: grey;
+    font-size:small;
+    width: 50%;
+    margin: auto;
+    margin-bottom: 26px;
+}
+
+input[type=submit] {
+    background-color: var(--blue);
+    color: white;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+}
+
+button {
+    background-color: var(--blue);
+    color: white;
+    width: 150px;
+    height: 50px;
+    border-radius: 4px;
+    margin: 20px 20px 40px 20px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer li {
+    display: inline;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+footer a {
+    text-decoration: none;
 }
