--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@ body {margin: 0;}
 * {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: var(--blue);
+    box-sizing: border-box;
 }
 
 .navigation-grocery {
@@ -16,10 +17,11 @@ body {margin: 0;}
     margin: 0px;
     position: fixed;
     background-color: white;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid lightgrey;
     width: 100%;
     margin-top: 0px!important;
     top: 0;
+    z-index: 1;
 }
 
 .navigation-items {
@@ -31,6 +33,10 @@ body {margin: 0;}
     display: inline;
     padding: 10px;
     justify-content: space-evenly;
+}
+
+.navigation-items li:hover {
+    background-color: lightgrey;
 }
 
 .navigation-items a {
@@ -50,7 +56,7 @@ body {margin: 0;}
 
 header {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 80px;
 }
 
 header h1 {
@@ -312,4 +318,61 @@ footer li {
 
 footer a {
     text-decoration: none;
+}
+
+.slideshow-container {
+    position: relative;
+}
+
+.mySlides {
+    /* display: none; */
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    /* color: white; */
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev {
+    left: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: lightgrey;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
