--- a/CSS/style.css
+++ b/CSS/style.css
@@ -208,6 +208,9 @@ form {
 form div p {
     font-weight: 300;
 }
+#error-fname, #error-email, #error-interest {
+    color: red;
+}
 
 form label {
     font-size: 20px;
@@ -222,7 +225,7 @@ form input, select {
     font-size: 16px;
     border-radius: 4px;
     border: none;
-    margin-bottom: 18px;
+    margin-bottom: 0px;
     margin-top: 4px;
 }
 
@@ -294,6 +297,10 @@ input[type=submit] {
     height: 40px;
     margin-top: 10px;
 }
+input[type=submit]:hover {
+    background-color: navy;
+    cursor: pointer;
+}
 
 button {
     background-color: var(--blue);
@@ -322,10 +329,6 @@ footer a {
 
 .slideshow-container {
     position: relative;
-}
-
-.mySlides {
-    /* display: none; */
 }
 
 .prev, .next {
