--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,7 @@ body {margin: 0;}
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: var(--blue);
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 .navigation-grocery {
@@ -19,7 +20,7 @@ body {margin: 0;}
     background-color: white;
     border-bottom: 1px solid lightgrey;
     width: 100%;
-    margin-top: 0px!important;
+    margin-top: 0px;
     top: 0;
     z-index: 1;
 }
@@ -378,4 +379,52 @@ footer a {
 .fade {
     animation-name: fade;
     animation-duration: 1.5s;
+}
+
+@media only screen and (max-width: 600px) {
+    .navigation-grocery {
+        flex-direction: column;
+        position: unset;
+    }
+    
+    .navigation-grocery img {
+        margin: 20px 0 10px 0;
+    }
+
+    .navigation-grocery ul {
+        margin-top: auto;
+    }
+
+    .navigation-items li {
+        display: block;
+        text-align: center;
+    }
+
+    .navigation-items li:first-child, .navigation-items li:last-child{
+        border: none;
+    }
+
+    header h1{
+        width: 100%;
+        text-wrap: wrap;
+    }
+
+    .col-100, .col-75, .col-25 {
+        display: block;
+    }
+
+    .col-100 img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        margin: 0;
+    }
+
+    .mini-profile {
+        margin: auto;
+    }
+    .mini-profile img {
+        width: 40px;
+        height: 40px;
+    }
 }
